[gd_scene load_steps=7 format=3 uid="uid://t3tbnql3t8eb"]

[ext_resource type="Script" path="res://Assets/Cards/card_base.gd" id="1_hujcr"]
[ext_resource type="Texture2D" uid="uid://bj5pa6wqtyfug" path="res://Assets/Cards/CardImages/Border.png" id="2_i7ew3"]

[sub_resource type="CanvasTexture" id="CanvasTexture_2tyr3"]
specular_color = Color(0, 0.713726, 0.811765, 1)

[sub_resource type="Animation" id="Animation_agyvy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b710i"]
resource_name = "TriggerCard"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, -0.261799, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lchxg"]
_data = {
"RESET": SubResource("Animation_agyvy"),
"TriggerCard": SubResource("Animation_b710i")
}

[node name="CardBase" type="MarginContainer"]
offset_right = 125.0
offset_bottom = 175.0
pivot_offset = Vector2(63, 90)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_hujcr")

[node name="Image" type="Sprite2D" parent="."]
centered = false

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource("2_i7ew3")
centered = false

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="Bars"]
layout_mode = 2
text = "Defend"
horizontal_alignment = 1

[node name="Attack" type="Label" parent="Bars"]
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="Multiplier" type="Label" parent="Bars"]
layout_mode = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Focus" type="TextureButton" parent="."]
layout_mode = 2
texture_hover = SubResource("CanvasTexture_2tyr3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lchxg")
}

[connection signal="mouse_entered" from="Focus" to="." method="_on_focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_focus_mouse_exited"]
[connection signal="pressed" from="Focus" to="." method="_on_focus_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
